--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>top</title>
+  <title>home</title>
 </head>
 <body>
-  <a href="{% url 'signup:signup' %}">ユーザー登録</a>
-  <a href="{% url 'login' %}" class="btn">ログイン</a></body>
+  <h1>welcome</h1>
+  <a href="{% url 'logout' %}">ログアウト</a>
+</body>
 </html>
