--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -4,21 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="../static/css/home.css">
   <title>home</title>
 </head>
 <body>
   <h1>welcome</h1>
   <a href="{% url 'logout' %}">ログアウト</a>
   <a href="{% url 'diary:new_diary' %}">日記を書く</a>
-
-  {% for diary in diarys %}
-    <div>
-      <p>{{ diary.created_date|date:"Y n/j H:i"}}</p>
-      <p>{{ diary.text }}</p>
-      <p>
-        <a href="{% url 'diary:delete' diary.id %}">削除</a>
-      </p>
+  <div class="container">
+    <div class="diaries">
+      {% for diary in diarys %}
+      <div class="diary">
+          <div class="content-view">
+            <p>{{ diary.created_date|date:"Y n/j H:i"}}</p>
+            <p>{{ diary.text }}</p>
+          </div>
+          <div class="action-content">
+            <p class="delete">
+              <a href="{% url 'diary:delete' diary.id %}">消</a>
+            </p>
+          </div>
+        </div>
+      {% endfor %}
     </div>
-  {% endfor %}
+    
+  </div>
 </body>
 </html>
