--- a/myapp/static/css/home.css
+++ b/myapp/static/css/home.css
@@ -1,5 +1,6 @@
 body {
   background-color: #d9ccc1;
+  position: relative;
 }
 
 .diaries {
@@ -33,7 +34,11 @@ body {
   position: relative;
 }
 
-.diary .action-content .delete {
+.diary .action-content p {
+  margin: 0;
+}
+
+.diary .action-content #delete {
   width: 40px;
   height: 40px;
   display: flex;
@@ -45,4 +50,28 @@ body {
   position: absolute;
   top: 8px;
   right: 40px;
+}
+
+.trash {
+  width: 40px;
+  height: 60px;
+  position: fixed;
+  bottom: 30px;
+  right: 50px;
+  background-color: gray;
+}
+
+.card_favorited {
+  transform-origin: 0.5em 0.5em;
+}
+
+.card_favorited::after {
+  z-index: 1;
+  opacity: 1;
+}
+
+.card_hidden {
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.5);
 }
