--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,34 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/home.css">
-  <title>home</title>
-</head>
-<body>
-  <h1>welcome</h1>
-  <a href="{% url 'logout' %}">ログアウト</a>
-  <a href="{% url 'diary:new_diary' %}">日記を書く</a>
-  <div class="container">
-    <div class="diaries">
-      {% for diary in diarys %}
-      <div class="diary">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../static/css/home.css" />
+    <title>home</title>
+  </head>
+  <body>
+    <h1>welcome</h1>
+    <a href="{% url 'logout' %}">ログアウト</a>
+    <a href="{% url 'diary:new_diary' %}">日記を書く</a>
+    <div class="container">
+      <div class="diaries">
+        {% for diary in diarys %}
+        <div class="diary">
           <div class="content-view">
             <p>{{ diary.created_date|date:"Y n/j H:i"}}</p>
             <p>{{ diary.text }}</p>
           </div>
           <div class="action-content">
-            <p class="delete">
-              <a href="{% url 'diary:delete' diary.id %}">消</a>
+            <p>
+              <a id="delete" href="{% url 'diary:delete' diary.id %}">消</a>
             </p>
           </div>
         </div>
-      {% endfor %}
+        {% endfor %}
+      </div>
+      <span class="trash">ゴミ箱</span>
     </div>
-    
-  </div>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    >
+      $(function () {
+        var start = document.getElementById("delete");
+        var start_position = start.getBoundingClientRect();
+        var start_x = start_position.left;
+        var start_y = start_position.top;
+
+        var goal = document.getElementsByClassName("trash");
+        var goal_position = goal.getBoundingClientRect();
+        var goal_x = goal_position.left;
+        var goal_y = goal_position.top;
+
+        var distance_x = goal_x - start_x;
+        var distance_y = goal_y - start_y;
+
+        $.fn.animate2 = function (properties, duration, ease) {
+          ease = ease || "ease";
+          var $this = this;
+          var cssOrig = { transition: $this.css("transition") };
+          return $this.queue((next) => {
+            properties["transition"] = "all " + duration + "ms " + ease;
+            $this.css(properties);
+            setTimeout(function () {
+              $this.css(cssOrig);
+              next();
+            }, duration);
+          });
+        };
+
+        $("#delete").on("click", function (e) {
+          e.preventDefault();   ///効かない
+          var linkUrl = $(this).attr('href');
+
+          $(".diary").animate2(
+            {
+              transform:
+                "translateX(" +
+                distance_x +
+                "px) " +
+                "translateY(" +
+                distance_y +
+                "px)",
+            },
+            1000
+          );
+
+          setTimeout(function(){
+            window.location = linkUrl;
+          }, 500);
+        });
+      });
+    </script>
+  </body>
 </html>
