diary model に title追加

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -24,7 +24,7 @@
         <div class="diary">
           <div class="content-view">
             <p>{{ diary.created_date|date:"Y n/j H:i"}}</p>
-            <p>{{ diary.text }}</p>
+            <p>{{ diary.title }}</p>
           </div>
           <div class="action-content">
             <p>
