textを改行ありで

--- a/myapp/templates/diary.html
+++ b/myapp/templates/diary.html
@@ -24,7 +24,9 @@
         {% if forloop.last %}
           <div class="paper" style="z-index: {{ forloop.revcounter }}">
             <div class="last page front contents">
-              <div>{{ diary.title }}</div>
+              <div class="title"><span>{{ diary.title }}</span></div>
+              <div class="date"><span>{{ diary.created_date|date:"Y n/j H:i" }}</span></div>
+              <div class="text"><span>{{ diary.text|wordwrap:10 }}</span></div>
             </div>
             <div
               class="page back"
@@ -34,7 +36,9 @@
         {% else %}
           <div class="paper" style="z-index: {{ forloop.revcounter }}">
             <div class="page front contents">
-              <div>{{ diary.title }}</div>
+              <div class="title"><span>{{ diary.title }}</span></div>
+              <div class="date"><span>{{ diary.created_date|date:"Y n/j H:i" }}</span></div>
+              <div class="text"><span>{{ diary.text|wordwrap:10 }}</span></div>
             </div>
             <div
               class="page back"
