--- a/myapp/static/css/diary.css
+++ b/myapp/static/css/diary.css
@@ -119,9 +119,24 @@ body {
 .book .page {
   width: 100%;
   height: 100%;
+  padding: 0 10px 0 50px;
   position: absolute;
   -webkit-transform: translateZ(0px);
   transform: translateZ(0px);
+}
+
+.book .page .title {
+  font-weight: 800;
+  letter-spacing: 4px;
+}
+
+.book .page .date {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.book .page .text {
+  letter-spacing: 2px;
 }
 
 .book .first .page {
