--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -1,3 +1,5 @@
+{% load app_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,8 +17,10 @@
     <title>home</title>
   </head>
   <body>
-    <a href="{% url 'logout' %}">ログアウト</a>
-    <a href="{% url 'diary:new_diary' %}">日記を書く</a>
+    <div class="menu">
+      <a href="{% url 'logout' %}">ログアウト</a>
+      <a href="{% url 'diary:new_diary' %}">日記を書く</a>
+    </div>
     <div class="container">
       <div class="diaries">
         {% for diary in diarys %}
@@ -30,6 +34,7 @@
           <div class="action-content">
             <p>
               <a class="delete" href="{% url 'diary:delete' diary.id %}">消</a>
+              <a class="month" href="{% url 'diary:diary_month' diary.month %}">{{ diary.month }}月</a>
             </p>
           </div>
         </div>
