一枚ごと、月ごとを対応

--- a/myapp/templates/diary_month.html
+++ b/myapp/templates/diary_month.html
@@ -15,7 +15,7 @@
         <div class="first paper" style="z-index: 50">
           <div class="page front contents">
             <div class="intro">
-              <h1>{{ month }}</h1>
+              <h1>{{ month }}月</h1>
             </div>
           </div>
           <div class="page back" style="transform: translateZ(0px);"></div>
