--- a/myapp/templates/diary.html
+++ b/myapp/templates/diary.html
@@ -12,7 +12,7 @@
     <div class="v-center"></div>
     <div id="container">
       <div class="book">
-        <div class="first paper" style="z-index: 50">
+        <div class="first paper" style="z-index: 3">
           <div class="page front contents">
             <div class="intro">
               <h1>日記</h1>
@@ -20,9 +20,7 @@
           </div>
           <div class="page back" style="transform: translateZ(0px);"></div>
         </div>
-        {% for diary in diarys %}
-        {% if forloop.last %}
-          <div class="paper" style="z-index: {{ forloop.revcounter }}">
+          <div class="paper" style="z-index: 2">
             <div class="last page front contents">
               <div class="title"><span>{{ diary.title }}</span></div>
               <div class="date"><span>{{ diary.created_date|date:"Y n/j H:i" }}</span></div>
@@ -30,24 +28,9 @@
             </div>
             <div
               class="page back"
-              style="transform: translateZ(-{{ forloop.counter }}px);"
+              style="transform: translateZ(-1px);"
             ></div>
           </div>
-        {% else %}
-          <div class="paper" style="z-index: {{ forloop.revcounter }}">
-            <div class="page front contents">
-              <div class="title"><span>{{ diary.title }}</span></div>
-              <div class="date"><span>{{ diary.created_date|date:"Y n/j H:i" }}</span></div>
-              <div class="text"><span>{{ diary.text|wordwrap:10 }}</span></div>
-            </div>
-            <div
-              class="page back"
-              style="transform: translateZ(-{{ forloop.counter }}px);"
-            ></div>
-          </div>
-        {% endif %}
-        {% endfor %}
-
 
         <div class="side" id="side"></div>
         <div class="bottom"></div>
