--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -18,8 +18,8 @@
   </head>
   <body>
     <div class="menu">
-      <a href="{% url 'logout' %}">ログアウト</a>
-      <a href="{% url 'diary:new_diary' %}">日記を書く</a>
+      <a href="{% url 'logout' %}" class="m-5">ログアウト</a>
+      <a href="{% url 'diary:new_diary' %}" class="m-5">日記を書く</a>
     </div>
     <div class="container">
       <div class="diaries">
