--- a/myapp/templates/top.html
+++ b/myapp/templates/top.html
@@ -8,5 +8,5 @@
 </head>
 <body>
   <a href="{% url 'signup:signup' %}">ユーザー登録</a>
-  <a href="{% url 'login' %}" class="btn">ログイン</a></body>
+  <a href="{% url 'signup:userLogIn' %}" class="btn">ログイン</a></body>
 </html>
