--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -14,6 +14,7 @@
       <input type="text" name="password">
       <div><button type="submit">ログイン</button></div>
     </form>
+    {{ error }}
   </div>
   <div class="back">
     <a href="{% url 'top:top' %}"><span><i></i>TOP</span></a>
