--- a/myapp/templates/top.html
+++ b/myapp/templates/top.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../static/css/signup.css">
   <title>top</title>
 </head>
 <body>
-  <a href="{% url 'signup:signup' %}">ユーザー登録</a>
-  <a href="{% url 'signup:userLogIn' %}" class="btn">ログイン</a></body>
+  <a href="{% url 'signup:signup' %}" class="btn-1">ユーザー登録</a>
+  <a href="{% url 'signup:userLogIn' %}" class="btn-1">ログイン</a></body>
 </html>
