--- a/myapp/static/css/signup.css
+++ b/myapp/static/css/signup.css
@@ -3,6 +3,7 @@ body {
   height: 100vh;
   background-color: #d9ccc1;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -39,22 +40,27 @@ form input:focus {
   width: 300px;
 }
 
-form .submit button {
+.btn-1 {
   background-color: black;
   border: none;
   border-radius: 30px;
   opacity: 0.8;
   color: white;
+  text-decoration: none;
   margin: 20px 0;
   padding: 20px 30px;
   cursor: pointer;
   transition-duration: 0.2s;
 }
 
-form .submit button:hover {
+.btn-1:hover {
   transform: scale(1.1,1.1);
   opacity: 1;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.4); ;
+}
+
+.btn-1:focus {
+  transform: scale(1.2,1.2);
 }
 
 .back {
