--- a/myapp/templates/diary_month.html
+++ b/myapp/templates/diary_month.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="../../static/css/diary.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
@@ -54,6 +55,7 @@
         <div class="shadow"></div>
       </div>
     </div>
+    <a href="{% url 'home:home' %}" class="home-btn"><i class="fas fa-home"></i></a>
 
     <script>
       $(function () {
