--- a/myapp/static/css/diary.css
+++ b/myapp/static/css/diary.css
@@ -1,12 +1,8 @@
-/*
 
-Click the diary to start animating.
-View the project on Github : https://github.com/akzhy/Vara
-
-*/
 html,
 body {
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: relative;
 }
 
@@ -223,4 +219,91 @@ body {
   .book {
     left: 50%;
   }
+}
+
+
+/* new_diary */
+
+.new_diary {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.new_diary form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.new_diary form input,
+.new_diary form textarea {
+  margin: 30px 0;
+  padding: 10px 20px;
+  color: black;
+  font-weight: 700;
+  background-color: #d9ccc1;
+  opacity: 0.5;
+  border: 2px solid black;
+  border-radius: 3px;
+  transition-duration: 0.2s;
+}
+
+.new_diary form input:hover,
+.new_diary form textarea:hover {
+  background-color: white;
+  opacity: 0.5;
+}
+
+.new_diary form input:focus,
+.new_diary form textarea:focus {
+  background-color: white;
+  color: black;
+  opacity: 1;
+}
+
+
+.new_diary form input {
+  width: 250px;
+  font-size: 20px;
+}
+
+.new_diary form input:focus {
+  width: 300px;
+}
+
+.new_diary form textarea {
+  width: 500px;
+  height: 300px;
+  font-size: 16px;
+  resize: none;
+}
+
+.new_diary form textarea:focus {
+  width: 600px;
+  height: 400px;
+}
+
+.new_diary form .btn-1 {
+  background-color: black;
+  border: none;
+  border-radius: 30px;
+  opacity: 0.8;
+  color: white;
+  text-decoration: none;
+  margin: 20px 0;
+  padding: 20px 30px;
+  cursor: pointer;
+  transition-duration: 0.2s;
+}
+
+.new_diary form .btn-1:hover {
+  transform: scale(1.1,1.1);
+  opacity: 1;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.4); ;
+}
+
+.new_diary form .btn-1:focus {
+  transform: scale(1.2,1.2);
 }
