--- a/myapp/templates/new_diary.html
+++ b/myapp/templates/new_diary.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../../static/css/diary.css" />
-  <title>New Diary</title>
-</head>
-<body>
-  <div class="new_diary">
-    <form method="POST" action="{% url 'diary:create_diary' %}" autocomplete="off">
-      {% csrf_token %}
-      {{form.user.as_hidden}}
-      <input type="text" name="title" placeholder="タイトル">
-      <textarea name="text" maxlength="250" placeholder="日記の内容を書いてね"></textarea>
-      <button type="submit" class="btn-1">OK</button>
-    </form>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../../static/css/diary.css" />
+    <title>New Diary</title>
+  </head>
+  <body>
+    <div class="new_diary">
+      <form
+        method="POST"
+        action="{% url 'diary:create_diary' %}"
+        autocomplete="off"
+      >
+        {% csrf_token %} {{form.user.as_hidden}}
+        <input type="text" name="title" placeholder="タイトル" />
+        <textarea
+          name="text"
+          id="text"
+          maxlength="250"
+          placeholder="日記の内容を書いてね"
+        ></textarea>
+        <div id="text-num">
+        </div>
+        <button type="submit" class="btn-1">OK</button>
+      </form>
+    </div>
+
+    <script>
+      var textarea = document.getElementById("text");
+      var maxTextNum = textarea.getAttribute("maxlength");
+      var textMessage = document.getElementById("text-num");
+
+      textarea.addEventListener("keyup", function () {
+        var currentTextNum = textarea.value.length;
+        textMessage.innerHTML =
+          "<p>日記にあと<span>" +
+          (maxTextNum - currentTextNum) +
+          "</span>文字書けるよ</p>";
+      });
+    </script>
+  </body>
 </html>
