文字がページから漏れるのを修正

--- a/myapp/templates/new_diary.html
+++ b/myapp/templates/new_diary.html
@@ -15,12 +15,13 @@
         autocomplete="off"
       >
         {% csrf_token %} {{form.user.as_hidden}}
-        <input type="text" name="title" placeholder="タイトル" />
+        <input type="text" name="title" placeholder="タイトル" required />
         <textarea
           name="text"
           id="text"
           maxlength="250"
           placeholder="日記の内容を書いてね"
+          required
         ></textarea>
         <div id="text-num">
         </div>
