--- a/myapp/static/css/diary.css
+++ b/myapp/static/css/diary.css
@@ -120,6 +120,7 @@ body {
   position: absolute;
   -webkit-transform: translateZ(0px);
   transform: translateZ(0px);
+  overflow: hidden;
 }
 
 .book .page .title {
@@ -134,6 +135,7 @@ body {
 
 .book .page .text {
   letter-spacing: 2px;
+  text-overflow: ellipsis;
   overflow: hidden;
 }
 
